# imgview

./: .gitignore  0temp.c  Readme.md  config.h.in  deprecations.txt  file.c  file.h  imgview.pro  list.c  list.h  main.c  meson.build  message-area.c  message-area.h  preferences.c  preferences.h  project.pro  update.sh  vnr-tools.c  vnr-tools.h  window.c  window.h
data/: imgview.desktop.in  imgview.desktop.in.in  imgview.metainfo.xml  meson.build  vnr-preferences-dialog.ui
data/icons/: meson.build
dialog/: dialog.c  dlg-file-rename.c  dlg-file-rename.h  message-area.c  preferences.c  preferences.h  vnr-crop.c  vnr-crop.h  vnr-properties.c  vnr-properties.h  vnr-resize.c  vnr-resize.h  vnr-scale.c  vnr-scale.h  xfce-filename-input.c  xfce-filename-input.h
dlg/: message-area.c  message-area.h  vnr-crop.c  vnr-crop.h  vnr-properties-dialog.c  vnr-properties-dialog.h
libgd/: gd-helpers.c  gd-helpers.h  gd-image.c  gd-image.h  gd-resize.c  gd-resize.h  gd-temp.c
other/: 01temp.c  vnr-preferences-dialog-1.ui  vnr-preferences-dialog-2.ui
po/: POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  lt.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: uni-anim-view.c  uni-dragger.c  uni-dragger.h  uni-exiv2.hpp  uni-nav.c  uni-nav.h  uni-scroll-win.c  uni-scroll-win.h  uni-utils.h  uni-zoom.h  vnr-crop.h  vnr-tools.c  vnr-tools.h
uni/: uni-anim-view.c  uni-anim-view.h  uni-cache.c  uni-cache.h  uni-dragger.c  uni-dragger.h  uni-exiv2.cpp  uni-exiv2.hpp  uni-image-view.c  uni-image-view.h  uni-scroll-win.c  uni-scroll-win.h  uni-utils.c  uni-utils.h
vnr/: vnr-crop.c  vnr-message-area.c
